análise inicial de bens - meu deus, que dados horríveis!

--- a/notebook/1 - Dados de candidatura.ipynb
+++ b/notebook/1 - Dados de candidatura.ipynb
@@ -264,6 +264,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NOME_CANDIDATO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10190</th>\n",
+       "      <td>RAIMUNDO LUNA NETO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           NOME_CANDIDATO\n",
+       "10190  RAIMUNDO LUNA NETO"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.SEQUENCIAL_CANDIDATO == 60000001382][['NOME_CANDIDATO']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
